+--------------------------+
Sat Sep  8 09:41:10 GMT+7 2012
calibre: Upgraded to 0.8.68

+--------------------------+
Thu Sep  6 09:17:44 GMT+7 2012
calibre: Rebuilt against new dependency: python-netifaces
python-netifaces: Added

+--------------------------+
Thu Sep  6 09:00:37 GMT+7 2012
BeautifulSoup: Upgraded to 4.1.3
lxml: Upgraded to 2.3.5

+--------------------------+
Wed Sep  5 18:25:55 GMT+7 2012
digiKam: Upgraded to 2.9.0

+--------------------------+
Sun Sep  2 13:30:12 GMT+7 2012
calibre: Upgraded to 0.8.67
dropbox: Upgraded to 1.5.27

+--------------------------+
Fri Aug 31 07:13:43 GMT+7 2012
libtiff: Added

+--------------------------+
Tue Aug 28 20:54:11 GMT+7 2012
wesnoth: Upgraded to 1.10.4

+--------------------------+
Sun Aug 26 21:23:37 GMT+7 2012 
calibre: Upgraded to 0.8.66
db48: Removed
gimp: Upgraded to 2.8.2
lua: Upgraded to 5.1.5
netatalk: Removed

+--------------------------+
Sun Aug 19 08:37:36 GMT+7 2012
guvcview: Upgraded to 1.6.1

+--------------------------+
Sat Aug 18 08:40:41 GMT+7 2012
calibre: Upgraded to 0.8.65

+--------------------------+
Thu Aug 16 22:51:01 GMT+7 2012
db48: rebuilt
gtk+2: rebuilt
  Synced with -Current

+--------------------------+
Sun Aug 12 06:52:51 GMT+7 2012
devede: Added
  DeVeDe is a program to create video DVDs and CDs (VCD, sVCD, or CVD)
  depends on dvdauthor and vcdimager
dvdauthor: Added
vcdimager: Added
  
+--------------------------+
Sat Aug 11 08:34:49 GMT+7 2012
calibre: Upgraded to 0.8.64

+--------------------------+
Fri Aug 10 16:34:07 GMT+7 2012
bashdb: Added
  bashDB is a BASH Debugger

+--------------------------+
Thu Aug  9 07:42:43 GMT+7 2012
digiKam: Upgraded to 2.8.0

+--------------------------+
Tue Aug  7 22:03:29 GMT+7 2012
cups: rebuilt
cups1.6: rebuilt
  Added upstream patch to fix incomplete printings
  http://cups.org/str.php?L4155

+--------------------------+
Tue Aug  7 21:08:02 GMT+7 2012
cups1.6: rebuilt
  Added upstream patch to remove obsolete browse directive