@@ -1,0 +1,3 @@
+Sysprof is a statistical, system-wide profiler for Linux. 
+
+You need to run this application using root
