@@ -1,4 +1,9 @@
 +--------------------------+
+Sun Sep  9 07:40:40 GMT+7 2012
+sysprof: Added
+  sysprof is a perfomance profiler for Linux
+
++--------------------------+
 Sat Sep  8 09:41:10 GMT+7 2012
 calibre: Upgraded to 0.8.68
 
